# parisneo-lollms

./: .gitignore  .gitmodules  Dockerfile  MANIFEST.in  README.md  docker-compose.yaml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: build-publish.yaml
configs/: config.yaml
doc/: Lollms-server  Lollms-server.md  server_endpoints.md
docs/: LLMBinding_doc.md  server_endpoints.md
elf_docker_cfg/personal/configs/: lollms_elf_config.yaml
elf_test_cfg/personal/configs/: lollms_elf_config.yaml  lollms_elf_local_config.yaml
examples/chat_forever/: console.py  console2.py  prompts.gron  prompts.json
examples/cpp_client_example/: .gitignore  CMakeLists.txt  build.py  main.cpp
examples/document_questions/: docs.txt  document_questions.py  questions.txt
examples/lllm_qt_client/: lllm_qt_client.py
examples/lollms_playground/: .gitignore  README.md  package-lock.json  server.js
examples/simple_story/: console.py
examples/vujs_web_ui/lollms_webui/: README.md  package-lock.json  package.json  tailwind.config.js  vue.config.js
lollms/: __init__.py  app.py  binding.py  client_session.py  code_parser.py  com.py  config.py  console.py  extension.py  functions.py  generation.py  helpers.py  internet.py  main_config.py  media.py  paths.py  personality.py  security.py  server.py  settings.py  stt.py  tasks.py  terminal.py  tti.py  tts.py  types.py  utilities.py
lollms/apps/console/: __init__.py
lollms/apps/discord_bot/: __init__.py
lollms/apps/discord_server/: .gitignore  README.md  __init__.py
lollms/apps/elf/: __init__.py
lollms/apps/gandalf/: __init__.py
lollms/apps/playground/: .env.development  __init__.py  package-lock.json
lollms/apps/playground2/: __init__.py  index.html  package.json  presets.json  vite.config.mjs
lollms/apps/server/: __init__.py
lollms/apps/settings/: README.md  __init__.py
lollms/apps/train/: __init__.py
lollms/audio_gen_modules/: lollms_xtts.py
lollms/configs/: config.yaml
lollms/databases/: discussions_database.py  models_database.py  skills_database.py
lollms/functions/: calculator.py  generate_image.py  list_personalities.py  peripherals.py  search.py  select_image_file.py  summon_personality.py  take_a_photo.py  take_screen_shot.py  timers.py
lollms/image_gen_modules/: clip_interrogator.py  lollms_sd.py
lollms/server/: elf.py  elf_server.py  new_app.py  server.py
lollms/server/configs/: config.yaml
lollms/server/endpoints/: lollms_asr.py  lollms_binding_files_server.py  lollms_binding_infos.py  lollms_comfyui.py  lollms_configuration_infos.py  lollms_discussion.py  lollms_extensions_infos.py  lollms_generator.py  lollms_hardware_infos.py  lollms_infos.py  lollms_models_infos.py  lollms_motion_ctrl.py  lollms_ollama.py  lollms_personalities_infos.py  lollms_petals.py  lollms_sd.py  lollms_skills_library.py  lollms_tts.py  lollms_uploads_infos.py  lollms_user.py  lollms_vllm.py  lollms_xtts.py
lollms/server/events/: lollms_files_events.py  lollms_generation_events.py  lollms_model_events.py  lollms_personality_events.py  lollms_rag_events.py
lollms/services/asr/: lollms_asr.py
lollms/services/comfyui/: lollms_comfyui.py
lollms/services/dalle/: lollms_dalle.py
lollms/services/midjourney/: lollms_midjourney.py
lollms/services/motion_ctrl/: install_motion_ctrl.sh  lollms_motion_ctrl.py  run_motion_ctrl.sh
lollms/services/ollama/: install.sh  install_ollama.sh  lollms_ollama.py  run_ollama.sh
lollms/services/open_ai_tts/: lollms_openai_tts.py
lollms/services/openai_whisper/: lollms_openai_whisper.py  lollms_whisper.py
lollms/services/petals/: install_petals.sh  lollms_petals.py  run_petals.sh
lollms/services/sd/: lollms_sd.py
lollms/services/vllm/: install_vllm.sh  lollms_vllm.py  (+1 more)
notebooks/: lollms_discord.ipynb  lollms_service.ipynb
personal_data/configs/: lollms_discord_local_config.yaml
scripts/linux/: linux_install.sh
scripts/macos/: macos_install.sh
scripts/windows/: win_conda_session.bat  win_install.bat
tests/endoints_unit_tests/: test_generation.html  test_generation.py
(+15 files in other folders)
